# wagtail-wordpress-image-importer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
wagtail_wordpress_image_importer/: __init__.py  apps.py
wagtail_wordpress_image_importer/management/commands/: import_wordpress_images.py
